--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-rut": "^0.2.3",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "sweetalert2": "^7.33.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
