--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-rut": "^0.2.3",
+    "rut-helpers": "^0.1.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "sweetalert2": "^7.33.1",
